--- a/通信笔记.md
+++ b/通信笔记.md
@@ -3,13 +3,16 @@
 - 时分复用TDM
 <center>![](./tdm.jpg)</center>
 假设每个输入的数据比特率是9. 6kbit / s ,线路的最大比特率为76. 8 kbit / s ,则可传输8 路信号。(输入端和输出端都需要使用缓存)
-时分复用可以充分的利用信道容量。时分复用的前提是信道速率极大而信息速率极小这样才有复用的可能。
+时分复用可以充分的利用信道容量。时分复用的前提是信道速率极大而信息速率极小这样才有复用的可能.  
+
 - 频分复用FDM
 <center>![Alt text](./fdm.png)</center>
-频分复用的基本思想是：要传送的信号带宽是有限的，而线路可使用的带宽则远远大于要传送的信号带宽，通过对多路信号采用不同频率进行调制的方法，使调制后的各路信号在频率位置上错开，以达到多路信号同时在一个信道内传输的目的。因此，频分复用的各路信号是在时间上重叠而在频谱上不重叠的信号。
+频分复用的基本思想是：要传送的信号带宽是有限的，而线路可使用的带宽则远远大于要传送的信号带宽，通过对多路信号采用不同频率进行调制的方法，使调制后的各路信号在频率位置上错开，以达到多路信号同时在一个信道内传输的目的。因此，频分复用的各路信号是在时间上重叠而在频谱上不重叠的信号。  
+
 - 正交频分复用OFDM
 <center>![Alt text](./ofdm.png)</center>
-OFDM(Orthogonal Frequency Division Multiplexing)实际是一种多载波数字调制技术。OFDM全部载波频率有相等的频率间隔，它们是一个基本振荡频率的整数倍，正交指各个载波的信号频谱是正交的。与其它数字通信系统一样，OFDM系统需要可靠的同步技术，包括定时同步、频率同步和相位同步，其中频率同步对系统的影响最大。OFDM系统比FDM系统要求的带宽要小得多。由于OFDM使用无干扰正交载波技术，单个载波间无需保护频带，这样使得可用频谱的使用效率更高。
+OFDM(Orthogonal Frequency Division Multiplexing)实际是一种多载波数字调制技术。OFDM全部载波频率有相等的频率间隔，它们是一个基本振荡频率的整数倍，正交指各个载波的信号频谱是正交的。与其它数字通信系统一样，OFDM系统需要可靠的同步技术，包括定时同步、频率同步和相位同步，其中频率同步对系统的影响最大。OFDM系统比FDM系统要求的带宽要小得多。由于OFDM使用无干扰正交载波技术，单个载波间无需保护频带，这样使得可用频谱的使用效率更高。  
+
 - 码分复用CDM
 在向量里，正交的定义是：向量S和T规格化内积（点积）是0。
 简单说就是：两个向量相乘的积再除以向量分量的个数。
@@ -28,7 +31,8 @@ B发送的是0 = (1,1,-1,1,-1,-1,1,-1) = -T
 拆分：A= S(S-T) = (-1,-1,-1,1,1,-1,1,1) (0,0,-2,2,0,-2,2,0) = 1 
 B = T(S-T) = (-1,-1,1,-1,1,1,-1,1)(0,0,-2,2,0,-2,2,0) = -1 
 这里特别需要注意的是：我们用的是发送数据得到组合，这个很自然。但是获取的时候，就是用每个站点的序列值进行内积得到数据。 
-所以，看着S-T很奇怪，实际表示的是：A发送的与序列值一致，B发送的与序列值相反。
+所以，看着S-T很奇怪，实际表示的是：A发送的与序列值一致，B发送的与序列值相反。  
+
 -波分复用WDM
 <center>![Alt text](./wdm.jpg)</center>
 波分复用WDM(Wavelength Division Multiplexing)是将两种或多种不同波长的光载波信号（携带各种信息）在发送端经复用器(亦称合波器，Multiplexer)汇合在一起，并耦合到光线路的同一根光纤中进行传输的技术；在接收端，经解复用器(亦称分波器或称去复用器，Demultiplexer)将各种波长的光载波分离，然后由光接收机作进一步处理以恢复原信号。这种在同一根光纤中同时传输两个或众多不同波长光信号的技术，称为波分复用。
